# ecflow-light

./: .clang-format  .gitignore  AUTHORS  CMakeLists.txt  NOTICE  README.md
.github/: ci-hpc-config.yml
.github/workflows/: ci.yml  sync.yml
cmake/: CompilerOptions.cmake  Dependencies.cmake  Documentation.cmake  FindClangFormat.cmake  FindSphinx.cmake
docs/: CMakeLists.txt
docs/doxygen/: Doxyfile.in
docs/sphinx/: conf.py  index.rst  reference.rst
share/: ifs-ecflow-config.yaml
shared/: ifs-ecflow-config.yaml
src/: CMakeLists.txt
src/libecflow_light/: CMakeLists.txt
src/libecflow_light/ecflow/light/: API.cc  API.h  API.hpp  ClientAPI.cc  ClientAPI.h  ClientAPI.hpp  Configuration.cc  Configuration.h  Conversion.h  Conversion.hpp  Dispatcher.cc  Dispatcher.h  Environment.cc  Environment.h  Exception.h  Exception.hpp  Filesystem.h  InternalAPI.h  LightAPI.cc  LightAPI.h  Log.h  Options.cc  Options.h  Requests.cc  Requests.h  StringUtils.cc  StringUtils.h  TinyCURL.cpp  TinyCURL.hpp  TinyREST.cc  TinyREST.cpp  TinyREST.h  TinyREST.hpp  Token.cc  Token.h  Trace.hpp  Version.cc  Version.cc.in  Version.h.in  Version.hpp.in
src/libecflow_lightf/: CMakeLists.txt  ecflow_light.F90
src/tools/: CMakeLists.txt  ClientMain.F90  ClientMain.c  ClientMain.cc  ClientMainMultiple.F90  ClientMainMultiple.cc  TinyMain.cc
tests/: CMakeLists.txt  TestAPI.cc  TestEnvironment.cc  TestUDPClient.cc
